cluster/apps/networking/traefik/external/short/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: console
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: short
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_SHORT_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: short
                port:
                  number: 3001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_SHORT_DOMAIN}"
      secretName: short-tls
